<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blessing.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/grayB0"
        android:src="@drawable/subhan_allah"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_main"
        android:padding="30dp">

        <Switch
            android:text="@string/every15Min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swt15Min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:textOn="@string/switchOn"
            android:textOff="@string/switchOff"
            android:thumb="@drawable/customswitchselector"
            android:track="@drawable/customtrack"
            android:showText="true"
            android:layout_weight="1"/>

        <Switch
            android:text="@string/everyhour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swtHour"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:textOn="@string/switchOn"
            android:textOff="@string/switchOff"
            android:thumb="@drawable/customswitchselector"
            android:track="@drawable/customtrack"
            android:layout_marginTop="10dp"
            android:showText="true"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCounter"
            android:text="@string/counter"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/bg_boder_gray_radius"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</LinearLayout>
