<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blessing.DetailActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDetail"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:background="@drawable/bg_border_button"
            android:layout_gravity="center_vertical|right"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/tvNumber"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="130sp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgTap"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tap"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layoutBlackTrans"
                android:background="@color/black_trans"
                android:visibility="gone"/>
        </FrameLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnReset"
            android:background="@drawable/bg_boder_gray_radius2"
            android:textColor="@color/gray47"
            android:text="@string/zero"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</LinearLayout>
